做了小小的修改

--- a/WebApp/Views/Home/Index.cshtml
+++ b/WebApp/Views/Home/Index.cshtml
@@ -26,7 +26,10 @@
             },
             onFailure: function (res) {
                 //失败的方法
-            }
+            },
+            funcWhenNoFile: function () { alert(1); },
+            funcWhenExt: function () { alert(2); },
+            funcWhenSize: function () { alert(3);}
         });
     </script>
 
