--- a/WebApp/Views/Home/Index.cshtml
+++ b/WebApp/Views/Home/Index.cshtml
@@ -29,7 +29,8 @@
             },
             funcWhenNoFile: function () { alert(1); },
             funcWhenExt: function () { alert(2); },
-            funcWhenSize: function () { alert(3);}
+            funcWhenSize: function () { alert(3); },
+            accept: "image/*,text/plain"
         });
     </script>
 
